# rust-fullstack-mini-project

./: README.md
cr8s-frontend/: Cargo.toml  index.html
cr8s-frontend/src/: contexts.rs  main.rs
cr8s-frontend/src/api/: mod.rs  user.rs
cr8s-frontend/src/components/: alert.rs  input.rs  login_form.rs  mod.rs  sidebar.rs
cr8s-frontend/src/pages/: home.rs  login.rs  mod.rs  not_found.rs
rocket_backend/: .env  Cargo.toml  Rocket.toml
rocket_backend/migrations/2024-02-05-101712_create_rustaceans/: up.sql
rocket_backend/migrations/2024-02-05-101722_create_crates/: up.sql
rocket_backend/migrations/2024-02-27-163749_create_users/: up.sql
rocket_backend/migrations/2024-02-27-163755_create_roles/: up.sql
rocket_backend/migrations/2024-02-27-163801_create_user_roles/: up.sql
rocket_backend/src/: auth.rs  lib.rs  modules.rs  repositorys.rs  schema.rs
rocket_backend/src/rocket_routes/: authorization.rs  commonds.rs  crates.rs  mod.rs  rustaceans.rs
rocket_backend/tests/: creates.rs  rustaceans.rs
rocket_backend/tests/common/: mod.rs
