[package]
name = "cr8s-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo-console = "0.3"
gloo-net = "0.5.0"
gloo-storage = "0.3.0"
serde = "1.0.197"
serde_json = "1.0.114"
web-sys = "0.3.67"
yew = {varsion = "0.21", features = ["csr"]}
yew-router = "0.18.0"
